--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /*Adding fonts*/
-p{
+body{
     font-family: "Ubuntu", sans-serif;
+    color: black;
 }
 h1{
     font-family: "Lilita", sans-serif;
@@ -13,12 +14,15 @@ h3{
 }
 /*Navigation*/
 .navBar{
-    border: 1px solid red;
+    margin: 0px;
     padding: 15px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 50px;
+    box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    
 
 }
 
@@ -27,19 +31,23 @@ h3{
     font-family: "Leckerli One", sans-serif;
 }
 
-.navItems ul{
+.navItems{
+    list-style-type: none;
+    text-decoration: none;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    border: 1px solid red;
 }
 
-.navItems li{
+.navItems li a{
+    color: black;
+    list-style-type: none;
+    text-decoration: none;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     padding: 15px;
-    border: 1px solid red;
+    font-weight: bold;
 }
 
 /*Hero img/About me*/
