working on project cards
need to figure alignment and classes

--- a/css/style.css
+++ b/css/style.css
@@ -69,17 +69,17 @@ h3{
     font-family: "Lilita One", sans-serif;
     margin: 0px;
     font-size: 60px;
-    padding: 50px 75px 10px 75px;
+    padding: 80px 100px 10px 100px;
 }
 .subTextHero{
     font-family: "Lilita One", sans-serif;
     margin: 0px;
     font-size: 25px;
-    padding: 0px 75px 10px 75px;
+    padding: 0px 100px 10px 100px;
 }
 .bodyTextHero{
     margin: 0px;
-    padding: 0px 75px 25px 75px;
+    padding: 0px 100px 25px 100px;
     font-size: 20px;
 }
 .mainButton{
@@ -95,18 +95,45 @@ h3{
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2);
     cursor: pointer;
     float: right;
-    margin-right: 20px;
+    margin: 0px 50px 50px 50px;
 }
 
 /*Project cards*/
+.projectCards{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 60px 22px 60px 22px;
+    border: 1px solid red;
+}
+.headerTextProjects{
+    justify-content: flex-start;
+}
 .urcCard{
     background-color: #B1D697;
     border-radius: 10px;
-
+    width: 1394px;
+    height: 526px;
+}
+.urcContent{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid red;
 }
 .edGovCard{
     background-color: #B1D697;
     border-radius: 10px;
-
+    width: 1394px;
+    height: 589px;
+}
+.edGovContent{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid red;
 }
 /*Footer*/
