--- a/css/style.css
+++ b/css/style.css
@@ -22,16 +22,12 @@ h3{
     height: 50px;
     box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.2);
     border-radius: 10px;
-    
-
 }
-
 .logoNav{
     font-size: 40px;
     font-family: "Leckerli One", sans-serif;
     cursor: pointer;
 }
-
 .navItems{
     list-style-type: none;
     text-decoration: none;
@@ -39,7 +35,6 @@ h3{
     flex-direction: row;
     justify-content: space-evenly;
 }
-
 .navItems li a{
     color: black;
     list-style-type: none;
@@ -58,7 +53,6 @@ h3{
     align-items: center;
     margin: 50px 100px 50px 100px;
 }
-
 .greenBox{
     background-color: #B1D697;
     border-radius: 10px;
@@ -82,21 +76,6 @@ h3{
     padding: 0px 100px 25px 100px;
     font-size: 20px;
 }
-.mainButton{
-    background-color: #7AAC7A;
-    font-family: "Lilita One", sans-serif;
-    color: white;
-    font-size: 25px;
-    width: 236px;
-    height: 58px;
-    text-align: center;
-    border-radius: 10px;
-    border: none;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2);
-    cursor: pointer;
-    float: right;
-    margin: 0px 50px 50px 50px;
-}
 
 /*URC Project card*/
 .projectCards{
@@ -119,29 +98,38 @@ h3{
 .urcContent{
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
-    align-items: stretch;
-    border: 1px solid red;
 }
+
 /*edGov Project card*/
 .edGovCard{
     background-color: #B1D697;
     border-radius: 10px;
     width: 1394px;
     height: 589px;
+    margin: 0 22px 60px 22px
 }
 .edGovContent{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: stretch;
-    border: 1px solid red;
 }
 .textContent{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    margin-left: 15px;
+    margin: 25px 50px;
+}
+.textContent h2{
+    font-size: 40px;
+    margin: 0px;
+}
+.textContent h3{
+    padding-top: 10px;
+    font-size: 25px;
+    margin: 0px;
+}
+.textContent p{
+    font-size: 20px;
+    margin: 0px;
+    padding: 0px;
 }
 
 /*Footer*/
@@ -179,4 +167,28 @@ h3{
 }
 .emailLogo{
     padding-right: 10px;
+}
+
+/*buttons*/
+.mainButton{
+    background-color: #7AAC7A;
+    font-family: "Lilita One", sans-serif;
+    color: white;
+    font-size: 25px;
+    width: 236px;
+    height: 58px;
+    text-align: center;
+    border-radius: 10px;
+    border: none;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    float: right;
+    margin: 0px 50px 50px 50px;
+}
+
+#cardButton{
+    margin-right: 15px;
+    padding: 0;
+    position: relative;
+    bottom: 80px;
 }
